# sports-tv-guide-app/src/types/generated-api-types.ts
@@ -74,3 +74,8 @@ export interface GameSummarySchema {
 export interface ScheduleResponseSchema {
   games: GameSchema[];
 }
+
+export interface TeamsResponseSchema {
+  sport: string;
+  teams: TeamSchema[];
+}
